// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`playerInformation unit test snapshot(PieceColor Black) 1`] = `
<div
  className="sc-gTRrQi jKxnBc"
>
  <span
    className="sc-iVCKna fuZnSy"
  >
    0
  </span>
  <div
    className="sc-ewnqHT wlbhL"
  >
    <span
      className="sc-bgqQcB kEGuYo"
      color="#fff"
    />
    <p
      className="sc-dicizt cPiJjV"
      color="#555"
    >
      P2
    </p>
  </div>
</div>
`;

exports[`playerInformation unit test snapshot(PieceColor White) 1`] = `
<div
  className="sc-gTRrQi jKxnBc"
>
  <div
    className="sc-ewnqHT wlbhL"
  >
    <span
      className="sc-bgqQcB gkSCde"
      color="#000"
    />
    <p
      className="sc-dicizt kSEvTm"
      color="#fff"
    >
      P1
    </p>
  </div>
  <span
    className="sc-iVCKna fuZnSy"
  >
    0
  </span>
</div>
`;
